# vrc_chatbox_webui

./: Cargo.toml  README.md
assets/: index.html
src/: endpoints.rs  main.rs  responder.rs
