[package]
name = "vrc_chatbox_webui"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
axum = "0.7.2"
local-ip-address = "0.5.6"
rosc = "0.10.1"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.0", features = ["fs"] }
